--- a/style.css
+++ b/style.css
@@ -1,23 +1,78 @@
-#camis_collapse_image
+.wrapper
 {
-	background-image: url("imgs/test.jpg");
+	display: flex;
 	width: 100%;
-	height: 500px;
 }
 
-#camis_collapse_btn
+#title_banner
 {
-	margin: auto;
+	text-align: center;
+
+	color: #fff;
+	font-weight: bold;
+	font-size: 5em;
+
+	overflow: hidden;
+	white-space: nowrap;
 }
 
-.work_term_header
+.sub_section_header
 {
-	width: 18rem;
-	background-color: #cccccc;
+	font-weight: bold;
+	font-style: italic;
+
+	margin-bottom: 10px;
 }
 
-.work_term_header:hover
+/*******************************************************************/
+
+.section
 {
-	background-color: #aaaaaa;
-	cursor: pointer;
+	margin-top: 50px;
+}
+
+.section_body
+{
+	padding-top: 15px;
+	padding-bottom: 5px;
+	padding-left: 15px;
+	padding-right: 15px;
+}
+
+.section_header
+{
+	padding: 12px;
+	border-radius: 5px;
+
+	color: #fff;
+	font-size: 18px;
+	font-weight: bold;
+
+	overflow: hidden;
+	white-space: nowrap;
+
+	box-shadow: 3px 3px 15px #aaa;
+}
+
+.section_header_v1
+{
+	background-color: #3d87f7;
+}
+
+.section_header_v2
+{
+	background-color: #4aaf38;
+}
+
+/*******************************************************************/
+
+.banner
+{
+	background-image: url("imgs/banner.jpg");
+
+	background-position: center;
+	background-attachment: fixed;
+
+	width: 100%;
+	height: 300px;
 }
