--- a/style.css
+++ b/style.css
@@ -1,72 +1,3 @@
-.wrapper
-{
-	display: flex;
-	width: 100%;
-}
-
-#title_banner
-{
-	text-align: center;
-
-	color: #fff;
-	font-weight: bold;
-	font-size: 5em;
-
-	overflow: hidden;
-	white-space: nowrap;
-}
-
-.sub_section_header
-{
-	font-weight: bold;
-	font-style: italic;
-
-	margin-bottom: 10px;
-}
-
-.section
-{
-	margin-top: 50px;
-}
-
-.section_body
-{
-	padding-top: 15px;
-	padding-bottom: 5px;
-	padding-left: 15px;
-	padding-right: 15px;
-}
-
-.section_header
-{
-	padding: 12px;
-	border-radius: 5px;
-
-	color: #fff;
-	font-size: 18px;
-	font-weight: bold;
-
-	overflow: hidden;
-	white-space: nowrap;
-
-	box-shadow: 3px 3px 15px #aaa;
-}
-
-.section_header:hover
-{
-	cursor: pointer;
-}
-
-.section_header_v1
-{
-	background-color: #3d87f7;
-}
-
-.section_header_v2
-{
-	background-color: #4aaf38;
-}
-
 .banner
 {
 	background-image: url("imgs/banner.jpg");
@@ -75,5 +6,36 @@
 	background-attachment: fixed;
 
 	width: 100%;
-	height: 300px;
+	min-height: 300px;
+}
+
+.content {
+	padding-left: 2em;
+	padding-right: 2em;
+}
+
+.section {
+	padding-bottom: 3em;
+}
+
+.main-content {
+	padding-top: 2em;
+}
+
+.banner-header {
+	padding-top: 1em !important;
+	font-size: 5em !important;
+}
+
+.section-header-v1 {
+	background-color: #3d87f7 !important;
+}
+
+.section-header-v2 {
+	background-color: #4aaf38 !important;
+}
+
+.sub_section_header {
+    font-weight: bold;
+    font-style: italic;
 }
