--- a/style.css
+++ b/style.css
@@ -1,12 +1,31 @@
+body {
+	background-color: #EEEEEE;
+}
+
+#wrapper {
+	max-width: 1680px;
+	margin-left: auto;
+	margin-right: auto;
+
+	padding: 0;
+}
+
 .banner
 {
-	background-image: url("imgs/banner.jpg");
-
-	background-position: center;
 	background-attachment: fixed;
+	background-position-x: center;
 
 	width: 100%;
-	min-height: 250px;
+	height: 300px;
+}
+
+.banner.top {
+	background-image: url("imgs/banner_top.png");
+}
+
+.banner.bottom {
+	background-image: url("imgs/banner_bottom.png");
+	background-position-y: bottom;
 }
 
 .content {
